tests/error/linear_errors/parent_moved2.err
Error: Copy violation (at $FILE:14:11)
   | 
12 |     if b:
13 |         t = s
14 |     return s.x
   |            ^^^ Field `s.x` cannot be returned ...

Note:
   | 
12 |     if b:
13 |         t = s
   |             - ... since variable `s` with non-copyable type `MyStruct` was
   |               already moved here

Guppy compilation failed due to 1 previous error
